Apends some number of buttons at end of page

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
       </table>
     </div>
 
+    <div class="files" id="files">
+      <h1>Resources</h1>
+
+    </div>
+
+    <!--
+    OLD PLACE HOLDR TEXT
+
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ac mattis magna. Sed ipsum ligula, semper scelerisque urna efficitur, tincidunt pellentesque libero. Morbi sodales massa in dolor pulvinar vehicula. Phasellus gravida magna quam, ac bibendum nisl rutrum vitae. Nulla vulputate dignissim mi, dapibus consequat est ornare nec. Proin placerat odio turpis, ut imperdiet nisl porta in. Sed pulvinar ullamcorper urna in tempor. Nulla facilisi. Mauris in euismod sem. Duis mollis sollicitudin condimentum. Etiam volutpat dignissim consequat. Donec tristique cursus sodales. Vestibulum sollicitudin fringilla justo a interdum. Sed imperdiet nec risus in egestas. Etiam luctus, libero in hendrerit ullamcorper, justo quam mattis libero, eu commodo est risus at nisl. Nulla ligula sem, auctor id dolor eu, sodales suscipit mi. Integer vestibulum nunc quis felis lacinia, faucibus fringilla leo fringilla. In efficitur dolor sed purus iaculis ultrices. Integer commodo vestibulum massa eu varius. Etiam nec odio quis arcu accumsan dignissim a id nisi. Sed gravida, est suscipit faucibus pretium, augue tellus egestas ante, et rutrum nisl quam non erat. Maecenas consequat vel leo ut tristique. Fusce condimentum libero sit amet ex blandit pulvinar. Aliquam pretium mi vitae eleifend aliquam. Integer imperdiet diam justo, et dignissim ex faucibus sed. Etiam nec commodo arcu, nec ultrices dolor. Donec arcu neque, porta sit amet nulla sed, iaculis egestas ipsum.
     </p>
@@ -56,6 +64,7 @@
     <p>
       Nullam eget accumsan massa, volutpat lacinia urna. Ut quis eros auctor, feugiat velit et, sagittis justo. Nunc neque ante, ultricies sit amet ipsum vel, laoreet scelerisque ex. Aliquam viverra quis odio a porta. Mauris eget erat rhoncus, sagittis mi et, elementum sem. In dictum nunc vitae diam egestas ultrices at ultrices libero. Quisque ultrices imperdiet ipsum eget ultrices. Suspendisse id diam tempor, interdum lectus eget, vehicula sem. Mauris interdum leo ac sem condimentum, sit amet suscipit orci lobortis. Suspendisse vitae rhoncus risus. In diam dui, finibus quis est ut, posuere faucibus tortor. Morbi vitae lorem quis ligula malesuada malesuada. Morbi magna tortor, venenatis in hendrerit ac, efficitur at velit. Sed molestie mi vel pharetra sollicitudin. Maecenas ultrices et leo quis porta. Quisque euismod mattis magna, ut faucibus dui convallis id. Mauris magna ipsum, elementum id orci at, posuere dignissim est. Duis posuere cursus consectetur. Praesent eget metus ut sapien vestibulum tristique nec a nisl.
     </p>
+   -->
   </div>
 
 </body>
