Adds some style to the file buttons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/myBtn.css">
   <link rel="stylesheet" href="./css/schedule.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="./js/functionality.js"></script>
+  <script src="./src/js/functionality.js"></script>
 </head>
 
 <body>
