Adds information to content of the page

--- a/index.html
+++ b/index.html
@@ -25,21 +25,25 @@
         <tr>
           <th>Type</th>
           <th>Day</th>
+          <th>Place</th>
           <th>Time</th>
         </tr>
         <tr>
           <td>SI Session</td>
           <td>Tuesday</td>
+          <td>Willey</td>
           <td>6:30-7:30</td>
         </tr>
         <tr>
           <td>SI Session</td>
           <td>Thursday</td>
+          <td>WALC</td>
           <td>6:30-7:30</td>
         </tr>
         <tr>
           <td>Office Hours</td>
           <td>Friday</td>
+          <td>Willey</td>
           <td>2:00-2:30</td>
         </tr>
       </table>
@@ -50,21 +54,16 @@
 
     </div>
 
-    <!--
-    OLD PLACE HOLDR TEXT
-
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ac mattis magna. Sed ipsum ligula, semper scelerisque urna efficitur, tincidunt pellentesque libero. Morbi sodales massa in dolor pulvinar vehicula. Phasellus gravida magna quam, ac bibendum nisl rutrum vitae. Nulla vulputate dignissim mi, dapibus consequat est ornare nec. Proin placerat odio turpis, ut imperdiet nisl porta in. Sed pulvinar ullamcorper urna in tempor. Nulla facilisi. Mauris in euismod sem. Duis mollis sollicitudin condimentum. Etiam volutpat dignissim consequat. Donec tristique cursus sodales. Vestibulum sollicitudin fringilla justo a interdum. Sed imperdiet nec risus in egestas. Etiam luctus, libero in hendrerit ullamcorper, justo quam mattis libero, eu commodo est risus at nisl. Nulla ligula sem, auctor id dolor eu, sodales suscipit mi. Integer vestibulum nunc quis felis lacinia, faucibus fringilla leo fringilla. In efficitur dolor sed purus iaculis ultrices. Integer commodo vestibulum massa eu varius. Etiam nec odio quis arcu accumsan dignissim a id nisi. Sed gravida, est suscipit faucibus pretium, augue tellus egestas ante, et rutrum nisl quam non erat. Maecenas consequat vel leo ut tristique. Fusce condimentum libero sit amet ex blandit pulvinar. Aliquam pretium mi vitae eleifend aliquam. Integer imperdiet diam justo, et dignissim ex faucibus sed. Etiam nec commodo arcu, nec ultrices dolor. Donec arcu neque, porta sit amet nulla sed, iaculis egestas ipsum.
-    </p>
-
-    <p>
-      Morbi cursus lacus tempor lacus commodo eleifend. Cras auctor neque felis, vitae fermentum augue blandit sit amet. Morbi libero libero, mattis sit amet tellus in, faucibus tristique risus. Donec ultrices vitae erat eget tempus. Etiam at enim non enim interdum luctus. Sed fermentum dui sit amet urna pulvinar, vitae blandit dolor sagittis. Nulla nec turpis tortor. Quisque at ullamcorper sem. Curabitur id sem sit amet ex eleifend tempus eget pretium leo. Aenean dignissim condimentum elit, at bibendum augue commodo varius. Fusce id malesuada leo. Sed sagittis ex eget ultricies cursus.
-    </p>
-
-    <p>
-      Nullam eget accumsan massa, volutpat lacinia urna. Ut quis eros auctor, feugiat velit et, sagittis justo. Nunc neque ante, ultricies sit amet ipsum vel, laoreet scelerisque ex. Aliquam viverra quis odio a porta. Mauris eget erat rhoncus, sagittis mi et, elementum sem. In dictum nunc vitae diam egestas ultrices at ultrices libero. Quisque ultrices imperdiet ipsum eget ultrices. Suspendisse id diam tempor, interdum lectus eget, vehicula sem. Mauris interdum leo ac sem condimentum, sit amet suscipit orci lobortis. Suspendisse vitae rhoncus risus. In diam dui, finibus quis est ut, posuere faucibus tortor. Morbi vitae lorem quis ligula malesuada malesuada. Morbi magna tortor, venenatis in hendrerit ac, efficitur at velit. Sed molestie mi vel pharetra sollicitudin. Maecenas ultrices et leo quis porta. Quisque euismod mattis magna, ut faucibus dui convallis id. Mauris magna ipsum, elementum id orci at, posuere dignissim est. Duis posuere cursus consectetur. Praesent eget metus ut sapien vestibulum tristique nec a nisl.
-    </p>
-   -->
+    <div class="contact" id="contact">
+      <h1>Contact Me</h1>
+      <p>
+        This whole website is basically made out of rubber bands and string so
+        I totally expect things to be broken and not work. If, for whatever
+        reason, you cannot get files, experience a bug, or would like to
+        otherwise report an issue, please report it at to me using the info
+        bellow and I'll be happy to look into it at my earliest convience.
+      </p>
+    </div>
   </div>
 
 </body>
