Makes the website more pretty

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="./css/master.css">
   <link rel="stylesheet" href="./css/myBtn.css">
   <link rel="stylesheet" href="./css/schedule.css">
+  <link rel="stylesheet" href="./css/files.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./src/js/functionality.js"></script>
 </head>
@@ -21,6 +22,7 @@
   <div class="section-bottom" id="body">
     <div class="schedule">
       <h1>Matt's Schedule</h1>
+      <hr>
       <table id="schedule">
         <tr>
           <th>Type</th>
@@ -31,19 +33,19 @@
         <tr>
           <td>SI Session</td>
           <td>Tuesday</td>
-          <td>Willey</td>
+          <td>WILYC215</td>
           <td>6:30-7:30</td>
         </tr>
         <tr>
           <td>SI Session</td>
           <td>Thursday</td>
-          <td>WALC</td>
+          <td>WALC B093</td>
           <td>6:30-7:30</td>
         </tr>
         <tr>
           <td>Office Hours</td>
           <td>Friday</td>
-          <td>Willey</td>
+          <td>WILY C215</td>
           <td>2:00-2:30</td>
         </tr>
       </table>
@@ -51,17 +53,21 @@
 
     <div class="files" id="files">
       <h1>Resources</h1>
+      <hr>
+      <table id="files_table">
+        <tr>
+          <th>File</th>
+          <th>Download</th>
+        </tr>
+      </table>
 
     </div>
 
     <div class="contact" id="contact">
-      <h1>Contact Me</h1>
+      <h1>Get in Contact</h1>
+      <hr>
       <p>
-        This whole website is basically made out of rubber bands and string so
-        I totally expect things to be broken and not work. If, for whatever
-        reason, you cannot get files, experience a bug, or would like to
-        otherwise report an issue, please report it at to me using the info
-        bellow and I'll be happy to look into it at my earliest convience.
+        Insert Text here!!
       </p>
     </div>
   </div>
